i will add readme

--- a/gallery/templates/welcome.html
+++ b/gallery/templates/welcome.html
@@ -1,4 +1,4 @@
 {% extends 'all-photos/base.html'%}
 {% block content %}
-<!-- <h1>Welcome to my Gallery web</h1> -->
+<!-- <h1>Welcome to my Gallery </h1> -->
 {% endblock %}
