--- a/gallery/templates/location.html
+++ b/gallery/templates/location.html
@@ -1,47 +1,75 @@
-% extends 'all-photos/base.html' %}
-{% block content %}
+{%extends 'base.html'%}
+{% load static%}
+{% block styles%}
 {{block.super}}
+<link href="https://fonts.googleapis.com/css?family=Concert+One|Fugaz+One|Capriola" rel="stylesheet"> 
+<link rel="stylesheet" href="{% static 'css/location.css' %}">
+{% endblock %}
+{% block content %}
+<br>
+<br>
 <div class="container">
-  <h1 class="text-center">{{location.photo_location }}</h1>
-  <div class="row">
+ <div class="row">
+
+  {% if images %}
     {% for image in images %}
-    <div class="col-md-4">
-        <img style=" margin-top: 20px; margin-bottom: 20px; width:350px; height:300px;" src="{{image.image.url}}" class="img-thumbnail" alt="Image" data-toggle="modal" data-target="#{{image.id}}">
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+         <center>
+          <h1>{{image.name}}</h1>
+           <img src="{{image.photo.url}}" class="img-responsive" data-toggle="modal" data-target="#image{{image.id}}">
+           <hr>
+           <p>{{image.description}}</p>
+           </center>
 
-      <!-- Image Details modal -->
+      </div>
+      <div class="modal fade" id="image{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="imageCenterTitle"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="imageLongTitle">{{image.name }}</h5>
+        <button type="button"  class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{image.photo.url}}" class="img-fluid" data-toggle="modal" data-target="#image{{image.id}}" style="max-width:572px;">
+        <p> {{image.description }}</p>
 
-      <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="imageTitle" aria-hidden="true">
-        <div  style="max-width:100%; max-height:100%; padding-top:100px;" class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h5 class="modal-title" id="imageTitle">{{image.name}}</h5>
-              </button>
-            </div>
-            <div class="modal-body">
-              <img src="{{image.image.url}}" style="width:570px; height:500px;" alt="Image">
-              <br>
-              {{image.description}}
-            </div>
-              <div class="modal-footer">
-                <input class="form-control input-lg" type="text"  value="{{image.image.url}}" id="{{image.id}}-url" >
-                <button class="btn btn-outline-info" onclick="copyUrl('{{image.id}}-url')">Copy Image Url</button>
-              </div>
-            </div>
-        </div>
+      </div>
+      <div class="modal-footer">
+        <input class="form-control" type="text" value="http://ozzycollage.herokuapp.com{{image.photo.url}}" id="thislinkhere-{{image.id}}">
+        <br>
+        <a onclick="copyLink"({{image.id}})><button class="btn btn-info btn-md">Copy image Link</button></a>
+
+      </div>
+     
+
     </div>
   </div>
-  <script type="text/javascript">
-    function copyUrl(element){
-      var myVar = document.getElementById(element);
-      myVar.select();
-      document.execCommand('copy');
-      alert("Copied the link of image: " + myVar.value);  
-    }
-  </script>
-{% empty %}
-<h3 class="text-center">No images available for {{location.photo_location }}</h3>
-{% endfor %}
 </div>
-</div>
-{% endblock %}
+
+    {% endfor %}
+  {% endif %}
+  </div>
+  </div>
+{% endblock%}
+{% block scripts %}
+{{block.super}}
+<script>
+  function copyLink(id) {
+    /* Get the text field */
+    var copyText = document.getElementById("thislinkhere-" + id);
+
+    /* Select the text field */
+    copyText.select();
+
+    /* Copy the text inside the text field */
+    document.execCommand("copy");
+
+    /* Alert the copied text */
+    alert("Copied the link: " + copyText.value);
+  }
+</script>
+
+{% endblock%}
