--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -1,54 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color:black; border:black; border-radius:1px;">
   <div class="container-fluid">
-
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'home' %}">Gallery</a>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><img src="../static/photo/pic.png" style="width:30px"></a>
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background-color:dimgray"> 
-        <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color:whitesmoke">Locations <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="/location/16">Rwanda</a></li>
-              <li><a href="/location/4">Kenya</a></li>
-              <li><a href="/location/5">London</a></li>
-              <li><a href="/location/14">USA</a></li>
-              <li><a href="/location/15">Tanzania</a></li>
-              <li><a href="/location/9">Congo</a></li>
-              <li><a href="/location/8">holland</a></li>
-              <li><a href="/location/6">France</a></li>
-               {% for location in locations %}
-               <li><a class="dropdown-item" href="{% url 'displayLocation' location.id%}">{{location.photo_location}}</a></li> 
-              {% endfor %}
-            
-            </ul>
-          </li>
-        </ul>
-
-
-     <!-- Adding a search form  -->
-     <div class="col-sm-2 col-md-2 navbar-right">
-
-            <form class="navbar-form" role="search" action="{% url 'search_images' %}">
-    
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search Category" name="category">
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                </div>
-              </div>
-              </form>
-              </div>
-            </div>
-        </nav>
-        </body>
-        </html>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav" style="font-weight:bolder;">
+      <li><a href="/">Ozzy Collage</a></li>
+        <li><a href="/location/3">Paris</a></li>
+        <li><a href="/location/4">USA</a></li>
+        <li><a href="/location/5">London</a></li>
+      </ul>
+      <form class="navbar-form navbar-right" role="search" action="{% url 'search_image' %}">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search by category" name="image">
+        </div>
+        <button class="btn btn-success" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+      </form>
+    </div>
+  </div>
+</nav>
